@@ -1,5 +1,6 @@
 - default to GPT on disks larger than 4TB, not LVM
 - fix GPT initialization on empty disk
+- fix failure to delete partitions after switching to GPT
 
 Version 16.51 - 3 February 2015
 
